--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "AI Summarizr",
-  "version": "1.0",
+  "version": "1.3",
   "description": "A simple Chrome extension to extract and summarize text from the current web page.",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html"
   },
